--- a/smartdns.conf
+++ b/smartdns.conf
@@ -37,11 +37,11 @@ bind [::]:53
 # dns cache size
 # cache-size [number]
 #   0: for no cache
-cache-size 512
+cache-size 40960
 
 # prefetch domain
 # prefetch-domain [yes|no]
-# prefetch-domain yes
+prefetch-domain yes
 
 # List of hosts that supply bogus NX domain results
 # bogus-nxdomain [ip/subnet]
@@ -112,10 +112,17 @@ log-level info
 #   -group [group]: set server to group, use with nameserver /domain/group.
 #   -exclude-default-group: exclude this server from default group.
 # server 8.8.8.8 -blacklist-ip -check-edns -group g1 -group g2
-server 8.8.8.8
-server 166.111.8.28 
 server 119.29.29.29
+server 119.28.28.28
 server 114.114.114.114
+server 112.124.47.27
+server 223.5.5.5
+server 223.6.6.6
+server 101.6.6.6
+
+server 8.8.8.8
+server 8.8.4.4
+server 1.1.1.1
 
 
 # remote tcp dns server list
