update speed check mode

--- a/smartdns.conf
+++ b/smartdns.conf
@@ -61,6 +61,7 @@ prefetch-domain yes
 #   speed-check-mode ping,tcp:80
 #   speed-check-mode tcp:443,ping
 #   speed-check-mode none
+speed-check-mode tcp:443,tcp:80,ping
 
 # force AAAA query return SOA
 # force-AAAA-SOA [yes|no]
