--- a/smartdns.conf
+++ b/smartdns.conf
@@ -37,7 +37,7 @@ bind [::]:53
 # dns cache size
 # cache-size [number]
 #   0: for no cache
-cache-size 40960
+cache-size 512
 
 # prefetch domain
 # prefetch-domain [yes|no]
@@ -115,15 +115,14 @@ log-level info
 # server 8.8.8.8 -blacklist-ip -check-edns -group g1 -group g2
 server 119.29.29.29
 server 119.28.28.28
-server 114.114.114.114
 server 112.124.47.27
 server 223.5.5.5
 server 223.6.6.6
 server 101.6.6.6
 
-server 8.8.8.8
-server 8.8.4.4
-server 1.1.1.1
+server 8.8.8.8 -group abroad
+server 8.8.4.4 -group abroad
+server 1.1.1.1 -group abroad
 
 
 # remote tcp dns server list
@@ -155,6 +154,11 @@ server 1.1.1.1
 # nameserver /domain/[group|-]
 # nameserver /www.example.com/office, Set the domain name to use the appropriate server group.
 # nameserver /www.example.com/-, ignore this domain
+nameserver /github.map.fastly.net/abroad
+nameserver /.github.com/abroad
+nameserver /.githubusercontent.com/abroad
+nameserver /github.global.ssl.fastly.net/abroad
+nameserver /.cloudfront.net/abroad
 
 # specific address to domain
 # address /domain/[ip|-|-4|-6|#|#4|#6]
